+ Private dependencies; no longer relying on what Joomla includes in its vendors folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 
 ### Composer
 /vendor
+# Dependencies processed by Mozart
+/plugins/system/passwordless/src/Dependencies/*
+!/plugins/system/passwordless/src/Dependencies/README.txt
 
 ### NPM
 /node_modules
